--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^5.2.1",
     "helmet": "^8.1.0",
     "mongoose": "^8.22.1",
-    "nodemailer": "^8.0.1"
+    "nodemailer": "^8.0.1",
+    "resend": "^6.9.1"
   }
 }
