--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "helmet": "^8.1.0",
     "mongoose": "^8.22.1",
     "nodemailer": "^8.0.1",
+    "nodemon": "^3.1.11",
     "resend": "^6.9.1"
   }
 }
